Fix vertical safari scrollbar

--- a/stylesheets/utils/scrollbar.scss
+++ b/stylesheets/utils/scrollbar.scss
@@ -17,6 +17,7 @@
 .scrollbar::-webkit-scrollbar {
   background: transparent;
   height: 6px;
+  width: 6px;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
